# ifcPlayground

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  IfcParser.cpp  IfcParser.h  UnCommenter.h  main.cpp
src/internal/: CMakeLists.txt  IfcFileTokenizer.cpp  IfcFileTokenizer.h  IfcToken.h  ifcLibInternal.h
src/public/: CMakeLists.txt  ifcLib.h
unitTests/: CMakeLists.txt  IfcFileTokenizerTests.cpp  main.cpp
